--- a/i3config/i3status.config
+++ b/i3config/i3status.config
@@ -37,7 +37,7 @@ ethernet _first_ {
 }
 
 battery all {
-        format = "[ %status %percentage %remaining ]"
+        format = "[ %status %percentage %remaining %consumption ]"
 	format_down = "[ No BAT ]"
 	#status_chr = ⚡ CHR
 	#status_bat = 🔋 BAT
